--- a/dyzj-dark.css
+++ b/dyzj-dark.css
@@ -60,8 +60,8 @@
     --yamlbg-color: #1a1a1a; /* 头部YAML背景色 */
     --yaml-color: #7f9bb7; /* 头部YAML字体颜色 */
     /* dy font */
-    --body-font: 'Source Sans Pro', '等距更纱黑体 SC', 'Helvetica Neue', Arial, sans-serif; /* 全局字体 */
-    --code-font: 'JetBrains Mono'; /* 代码块以及行内代码字体 */
+    --body-font: '霞鹜文楷等宽', 'Source Sans Pro', '等距更纱黑体 SC', 'Helvetica Neue', Arial, sans-serif; /* 全局字体 */
+    --code-font: '霞鹜文楷等宽', 'JetBrains Mono'; /* 代码块以及行内代码字体 */
     /* bg image */
     --bgimg-url: url(./bg-dark.gif);
 }
