--- a/dyzj-light.css
+++ b/dyzj-light.css
@@ -59,8 +59,8 @@
     --yamlbg-color: #f7f7f7; /* 头部YAML背景色（白色） */
     --yaml-color: #585858; /* 头部YAML字体颜色（黑色） */
     /* dy font */
-    --body-font: 'Source Sans Pro', '等距更纱黑体 SC', 'Helvetica Neue', Arial, sans-serif; /* 全局字体（"Poppins", -apple-system, "Helvetica Neue", Helvetica, "Noto Sans", "Nimbus Sans L", Arial, "Liberation Sans", "Noto Sans CJK SC", "PingFang SC", "Hiragino Sans GB", "Source Han Sans SC", "Source Han Sans CN", "Microsoft YaHei", "Wenquanyi Micro Hei", "WenQuanYi Zen Hei", "ST Heiti", SimHei, "WenQuanYi Zen Hei Sharp", sans-serif;） */
-    --code-font: 'JetBrains Mono'; /* 代码块以及行内代码字体 */
+    --body-font: '霞鹜文楷等宽', 'Source Sans Pro', '等距更纱黑体 SC', 'Helvetica Neue', Arial, sans-serif; /* 全局字体（"Poppins", -apple-system, "Helvetica Neue", Helvetica, "Noto Sans", "Nimbus Sans L", Arial, "Liberation Sans", "Noto Sans CJK SC", "PingFang SC", "Hiragino Sans GB", "Source Han Sans SC", "Source Han Sans CN", "Microsoft YaHei", "Wenquanyi Micro Hei", "WenQuanYi Zen Hei", "ST Heiti", SimHei, "WenQuanYi Zen Hei Sharp", sans-serif;） */
+    --code-font: '霞鹜文楷等宽', 'JetBrains Mono'; /* 代码块以及行内代码字体 */
     /* bg image */
     --bgimg-url: url(./bg-light.gif);
 }
